--- a/index.html
+++ b/index.html
@@ -203,6 +203,34 @@
       </li>
     </ol>
   </div>
+  <div class="d-none" itemscope itemtype="https://schema.org/Organization">
+    <h1 itemprop="name">StudyTub-Your One-Stop for all the Notes</h1>
+    <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
+      <img itemprop="contentUrl" src="https://studytub.netlify.app/" alt="StudyTub Organization Logo">
+      <meta itemprop="url" content="https://studytub.netlify.app/img/core-img/nanda.webp">
+      <meta itemprop="width" content="200">
+      <meta itemprop="height" content="100">
+    </div>
+    <div itemprop="description">
+      Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else
+    </div>
+    <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+      <span itemprop="streetAddress">Bhubaneswar,Odisha,India</span>
+      <span itemprop="addressLocality">Bhubaneswar</span>,
+      <span itemprop="addressRegion">Odisha</span>
+      <span itemprop="postalCode">751024</span>
+      <span itemprop="addressCountry">India</span>
+    </div>
+    <div itemprop="telephone">(123) 456-7890</div>
+    <div itemprop="email">studytub1@gmail.com</div>
+    <div itemprop="url">https://studytub.netlify.app/</div>
+    <div itemprop="sameAs">
+      
+      <a href="https://www.linkedin.com/company/study-tub/"><i class="fa fa-linkedin"></i></a>
+ 
+      
+    </div>
+  </div>
   <div id="preloader">
     <div class="preload-content">
       <!-- <div id="world-load"></div> -->
