--- a/index.html
+++ b/index.html
@@ -154,6 +154,86 @@
         ]
       }
       </script>
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "What is Study Tub?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Study Tub is a website that provides free notes and resources related to Bachelor of Technology. Our goal is to create a collection of useful learning resources based on feedback and requests from students."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Is Study Tub free?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, all of the notes and resources on Study Tub are completely free."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Who can use Study Tub?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Study Tub is designed for students studying Bachelor of Technology. However, anyone can access and use the resources available on the website."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Are the notes on Study Tub reliable?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "We strive to provide accurate and reliable information on Study Tub. However, we cannot guarantee the accuracy of all information provided. Students should use their own judgement and seek additional resources as needed."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Can I request specific notes on Study Tub?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, we encourage students to make requests for notes and resources they would like to see on the website. You can make a request by using the \"Contact Us\" page."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Can I contribute to Study Tub?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, we welcome contributions from students who would like to share their own notes or resources with others. You can contact us to inquire about contributing."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How often are new notes added to Study Tub?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "We aim to add new notes and resources on a regular basis, based on feedback and requests from students."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Can I share Study Tub resources with others?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, you are welcome to share Study Tub resources with others. We encourage students to help spread the word about Study Tub and the resources we provide."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How can I support Study Tub?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "You can support Study Tub by sharing our website with others, making a contribution to help cover website costs, or by providing feedback and suggestions for improvement."
+              }
+            }
+          ]
+        }
+        </script>
 </head>
 
 <body>
