--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,87 @@
     <meta charset="utf-8" />
     <link rel="icon" href="assets/images/logo/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="assets/images/logo/logo.png" />
-    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>StudyTub</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7833317136597688"
      crossorigin="anonymous"></script>
+     <meta name="google-site-verification" content="studytub" />
+  <meta charset="UTF-8" />
+  <meta name="description"
+    content="Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else" />
+  <meta name="keywords" content="Mathematics notes
+  Physics notes
+  Chemistry notes
+  Mechanics notes
+  Thermodynamics notes
+  Materials science notes
+  Computer programming notes
+  Object-oriented programming notes
+  Data structures and algorithms notes
+  Database management system notes
+  Software engineering principles notes
+  Operating system notes
+  Computer networks notes
+  Digital signal processing notes
+  Control systems notes
+  Power systems notes
+  Electronic circuits notes
+  Communication systems notes
+  Microprocessors and microcontrollers notes
+  Artificial intelligence notes
+  Machine learning notes
+  Robotics notes
+  Computer graphics notes
+  Web development notes
+  Mobile app development notes
+  Internet of Things (IoT) notes
+  Cybersecurity notes
+  Data analytics notes
+  Cloud computing notes
+  Virtual reality notes
+  Augmented reality notes
+  Blockchain notes. Computer science notes
+  Electrical engineering notes
+  Mechanical engineering notes
+  Civil engineering notes
+  Electronics and communication engineering notes
+  Information technology notes
+  Software engineering notes
+  Programming tutorials
+  Code examples
+  Algorithm explanations
+  Data structure tutorials
+  Web development resources
+  App development resources
+  Machine learning tutorials
+  Artificial intelligence tutorials
+  Robotics tutorials
+  Technical interview preparation
+  Internship preparation.B.Tech notes
+  Engineering study materials
+  Free learning resources
+  Academic resources
+  Exam preparation
+  Online study platform
+  Self-learning tools
+  Technical knowledge
+  Study guides
+  Course materials
+  Digital education
+  Education technology
+  Study at home
+  E-learning platform
+  Self-paced learning
+  Exam revision materials
+  Online education
+  Distance learning resources
+  STEM education.Studytub Notes Cloudflare Noteshub studytub engineeringnotes engineer engineering" />
+  <meta property="og:title" content="StudyTub" />
+  <meta property="og:description"
+    content="Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else" />
+  <meta property="og:type" content="website" />
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
